# clonehunter

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  some.ch  somer.ch
.cargo/: config.toml
.github/workflows/: release.yml
src/: delete.rs  hunt.rs  lib.rs  main.rs  operations.rs  stupid_traits.rs  traits.rs
src/common/: config.rs  core.rs  mod.rs  trait_defs.rs
