[package]
name = "clonehunter"
version = "0.4.0"
edition = "2021"
description = "An ultra simple command line utility that identifies groups of identical files and displays them to the console"
authors = ["Venkatesh Omkaram"]
notices = ["Copyright (c) 2023 Venkatesh Omkaram"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/omkarium/clonehunter"
homepage = "https://github.com/omkarium/clonehunter"
readme = "README.md"
keywords = ["duplicate", "dupe", "finder"]
categories = ["filesystem", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[package.metadata.docs.rs]
#all-features = true
#rustc-args = ["-C target-feature=+aes"]

[[bin]]
name = "clonehunter"
path = "src/main.rs"

[lib]
name = "common"
path = "src/common/mod.rs"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
lazy_static = "1.4.0"
rayon = "1.8.0"
chrono = "0.4.31"
sha256 = "1.5.0"
md5 = "0.7.0"
num-bigint = "0.4.4"
indicatif = "0.17.7"
human_bytes = "0.4.3"
colored = "2.1.0"
hashbrown = "0.14.3"
fxhash = "0.2.1"
jwalk = "0.8.1"
#gxhash = "3.4.1" //Creates issues when RUSTFLAGS are not used
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "=1.0.117"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true